# zero2prod-rs

./: .env  Cargo.toml  Dockerfile  README.md  sqlx-data.json
migrations/: 20221019172843_create_subscriptions_table.sql
notes/: chapter-01.md  chapter-02.md  chapter-03.md
scripts/: init_db.sh
src/: configurations.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
